--- a/FlashAlarm/Info.plist
+++ b/FlashAlarm/Info.plist
@@ -11,5 +11,7 @@
             <string>cstr6suwn9.skadnetwork</string>
         </dict>
     </array>
+    <key>NSUserTrackingUsageDescription</key>
+    <string>広告のパーソナライズのためにトラッキングを使用します</string>
 </dict>
 </plist>
